...
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
...
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>

    <!-- Text View Labels -->
    <string name="guide_to_save_label">Choose a POI and save the location</string>

    <!-- Button Labels and Description -->
...
