<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/selectLocationFragmentFl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--Add the map fragment for the user to select the location-->
        <fragment
            android:id="@+id/google_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="@dimen/margin_large"
            android:orientation="vertical">

            <TextView
                android:id="@+id/guide_to_save_tv"
                style="@style/primaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/guide_to_save_label" />

            <Button
                android:id="@+id/save_poi_btn"
                style="@style/primaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_btn_label" />
        </LinearLayout>


    </FrameLayout>
</layout>
